--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,26 @@
 {
-  "name": "My Website",
-  "short_name": "Website",
-  "start_url": "/my-website1/",
+  "name": "My PWA App",
+  "short_name": "PWA App",
+  "description": "Aplikasi Progressive Web App saya",
+  "id": "/",
+  "start_url": "/index.html",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
+  "orientation": "portrait",
   "icons": [
     {
-      "src": "icon.png",
+      "src": "/icon.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
-  ]
+  ],
+  "screenshots": [],
+  "launch_handler": {}
 }
